--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@lottiefiles/lottie-player": "^1.6.0",
+    "@prisma/client": "^4.8.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.1",
     "next": "13.0.2",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
