--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-sidebar": "^1.1.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "4.8.4"
   },
   "devDependencies": {
