--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "c3-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@lottiefiles/lottie-player": "^1.6.0",
-    "@prisma/client": "^4.8.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "axios": "^1.2.2",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
-    "firebase": "^9.15.0",
-    "firebase-admin": "^11.4.1",
-    "js-cookie": "^3.0.1",
-    "next": "13.0.2",
-    "next-sidebar": "^1.1.1",
-    "nextjs-progressbar": "^0.0.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
-    "react-responsive-carousel": "^3.2.23",
-    "typescript": "4.8.4"
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.3"
-  }
+    "name": "c3-website",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "postinstall": "prisma generate"
+    },
+    "dependencies": {
+        "@lottiefiles/lottie-player": "^1.6.0",
+        "@prisma/client": "^4.8.1",
+        "@types/node": "18.11.9",
+        "@types/react": "18.0.25",
+        "@types/react-dom": "18.0.8",
+        "axios": "^1.2.2",
+        "eslint": "8.27.0",
+        "eslint-config-next": "13.0.2",
+        "firebase": "^9.15.0",
+        "firebase-admin": "^11.4.1",
+        "js-cookie": "^3.0.1",
+        "next": "13.0.2",
+        "next-sidebar": "^1.1.1",
+        "nextjs-progressbar": "^0.0.16",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hot-toast": "^2.4.0",
+        "react-icons": "^4.7.1",
+        "react-responsive-carousel": "^3.2.23",
+        "typescript": "4.8.4"
+    },
+    "devDependencies": {
+        "@types/js-cookie": "^3.0.2",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.18",
+        "prisma": "^4.8.1",
+        "tailwindcss": "^3.2.3"
+    }
 }
